fix replace with temp order ids